# histotab

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
histotab/: __init__.py  dataset.py  features.py  plots.py
histotab/data/: cli_format_tcga_tab.py  deduplicate_data.py
histotab/modeling/: predict.py  train.py
notebooks/: column_names.txt  evaluate_simpe_enriched_lr.ipynb  evaluate_simpe_enriched_nn.ipynb  format_cbioportal_data.ipynb  format_data_cbioportal_cptac.ipynb  format_data_cbioportal_msk.ipynb  format_data_cbioportal_tcga.ipynb
scripts/: example_usage.sh
