[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "histotab"
version = "0.0.1"
description = "Mulit modal histo and tabular data fusion"
authors = [
  { name = "Valentin Oreiller" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["histotab"]
include = ["pyproject.toml", "histotab/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["histotab"]
force-sort-within-sections = true

